lab6 path changed to relative